[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spam-message-identifier"
version = "0.1.0"
description = "Spam Message Identifier Flask app"
requires-python = ">=3.10"
dependencies = [
	"flask>=2.0.0",
	"numpy>=1.21.0",
	"pandas>=1.3.0",
	"scikit-learn>=1.0.0",
	"psycopg2-binary>=2.9.0",
]

[project.scripts]
app = "app:app"
